--- a/webui/react/src/pages/ModelRegistry.module.scss
+++ b/webui/react/src/pages/ModelRegistry.module.scss
@@ -18,3 +18,13 @@
     font-size: 14px;
   }
 }
+.tagsRenderer {
+  :global([aria-label='new-tag-trigger']) {
+    display: none !important;
+  }
+  &:hover {
+    :global([aria-label='new-tag-trigger']) {
+      display: inherit !important;
+    }
+  }
+}
